<resources>
    <string name="app_name">Roaming Control</string>
    <string name="version" translatable="false">v1.54beta</string>
    <string name="title_activity_main">Roaming Control</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="whitelist_mode">Whitelist mode</string>
    <string name="whitelist_mode_summ">If this and Force roaming is enabled, the phone will be forced into roaming mode on all networks except those added in Saved roaming</string>
    <string name="advanced_force">Advanced force roaming</string>
    <string name="advanced_force_summ">More force roaming options</string>
    <string name="match_name">Match network names</string>
    <string name="match_name_summ">Match network name in addition to MNC\n(useful for networks that have several MNC)</string>
    <string name="about_message">
        <![CDATA[<b>Created by:</b> CazeW
        <br><br>
        <b>Huge thanks to:</b><br>
        Sebastl@xda for beta testing!
        <br><br>
        <b>Special thanks to:</b><br>
        rovo89<br>
        Lion_1@xda<br>
        oma@xda<br>
        (for original National Roaming Xposed module)
        <br><br>
        <b>Translation</b>
        <br>
        toBsucht Psp@xda (German)]]>
    </string>
    <string name="donate">Like this app? Feel free to buy me a beer.</string>
    <string name="paypal_donate">Paypal donate button</string>
    <string name="help_message_main">
        <![CDATA[<b>If the settings do not take effect immediately, you can toggle flight mode on and off to apply them.</b><br>
        <br>
        <br>
        <u>National roaming</u><br>
        <br>
        <b>National roaming</b><br>
        This option allows national roaming on virtual networks. Enabling this will also disable the "Force roaming" setting unless "Advanced force roaming" is enabled.<br>
        <br>
        <b>Force roaming</b><br>
        This option forces the phone into roaming mode on national networks that are not your home network. Enabling this will also
        disable the "National roaming" setting unless "Advanced force roaming" is enabled.<br>
        Can also be used for Whitelist mode, see settings.<br>
        <br>
        <b>Advanced force roaming</b><br>
        This option will allow you to manually specify the networks you want to force the phone into roaming mode on. In advanced
        mode you can also have both National roaming and Force roaming enabled at the same time.<br>
        <br>
        <b>Manage force networks</b><br>
        Opens a window where you can add and delete networks on which you want to force the phone into roaming mode on. Note, if
        you have the same network added to both lists, the phone will go into roaming mode on that network and display the R. The same
        applies to national roaming.<br>
        <br>
        <u>Saved roaming</u><br>
        <br>
        <b>Saved network roaming</b><br>
        This option allows roaming in the networks/countries of your choosing.<br>
        <br>
        <b>Roaming type</b><br>
        Select if you want to allow roaming based on networks or countries. Only the selected type is active, so roaming is
        only allowed based on the selected type.<br>
        <i><font color="red">Note: Country mode will allow roaming on all the networks in the added countries.</font></i><br>
        <br>
        <b>Manage Saved Networks/Countries</b><br>
        Opens a window where you can add and delete networks/countries where you want roaming to be allowed.<br>
        <br>
        <u>Other</u><br>
        <br>
        <b>Hide application icon</b><br>
        This option hides the application icon from the drawer and makes it accessible only through the Xposed app.]]></string>
    <string name="national_roaming">National roaming</string>
    <string name="national_roaming_summ">Allows national roaming</string>
    <string name="saved_roaming">Saved roaming</string>
    <string name="saved_roaming_network">Saved network roaming</string>
    <string name="saved_roaming_country">Saved country roaming</string>
    <string name="saved_roaming_network_summ">Allows roaming on saved networks</string>
    <string name="saved_roaming_country_summ">Allows roaming in saved countries</string>
    <string name="type_roaming">Roaming type</string>
    <string name="country">Country</string>
    <string name="network">Network</string>
    <string name="whitelist">Whitelist</string>
    <string name="countryMode">Country mode</string>
    <string name="networkMode">Network mode (default)</string>
    <string name="mode">mode</string>
    <string name="manage_networks">Manage saved networks</string>
    <string name="manage_countries">Manage saved countries</string>
    <string name="manage_force_roaming">Manage force networks</string>
    <string name="force_roaming_summ">Force phone into roaming mode on national networks</string>
    <string name="hide_app">Hide application icon</string>
    <string name="hide_app_summ">Hides the application icon from the drawer</string>
    <string name="force_roaming">Force roaming</string>
    <string name="help_message_force">
        <![CDATA[<b>Current network</b>
        <br>
        This displays the current network you are on.<br>
        <br>
        <u>Adding a network</u><br>
        <br>
        There are two ways you can add a network to your networks list. Press the \"Add current\" button to add
        the current network you are on to the list. Alternatively you can add in networks manually by pressing the \"+\" button.<br>
        <br>
        <b>Add network window</b><br>
        Here you can enter in the values for the network manually. You are encouraged to enter the correct name for the network
        (as it is displayed on your phone), but this is not necessary.<br>
        <br>
        <u>Removing a network</u><br>
        <br>
        You can remove a network from the list by simply pressing on the network and a popup window will appear asking if you want
        to remove that network. You can also long press on a network to select several to remove.<br>]]></string>
    <string name="help_message_network">
        <![CDATA[<b>Current network</b>
        <br>
        This displays the current network you are on.<br>
        <br>
        <u>Adding a network</u><br>
        <br>
        There are two ways you can add a network to your networks list. Press the \"Add current\" button to add
        the current network you are on to the list. Alternatively you can add in networks manually by pressing the \"+\" button.<br>
        <br>
        <b>Add network window</b><br>
        Here you can enter in the values for the network manually. You are encouraged to enter the correct name for the network
        (as it is displayed on your phone), but this is not necessary if you enter the correct MNC number for the network.<br>
        <font color="red">If you do not know the MNC number, then the name has to be correct and the <b>\"Match network names\"</b> option has to be
        enabled in the settings for the roaming to work.</font><br>
        <br>
        <u>Removing a network</u><br>
        <br>
        You can remove a network from the list by simply pressing on the network and a popup window will appear asking if you want
        to remove that network. You can also long press on a network to select several to remove.<br>]]></string>
    <string name="networks">networks</string>
    <string name="current_network">Current network</string>
    <string name="unknown_network">Unknown network, can not add this</string>
    <string name="saved_networks">Saved networks</string>
    <string name="add_network">Add network</string>
    <string name="edit_network">Edit network</string>
    <string name="action_sort">Sort</string>
    <string name="current_network_name_country">%1$s%2$s</string>
    <string name="manualName">Network name</string>
    <string name="manualMCC">MCC number</string>
    <string name="manualMNC">MNC number</string>
    <string name="already_exists_country">is already in the list</string>
    <string name="already_exists_namemcc">You already have a network with this name and MCC value</string>
    <string name="already_exists_mccmnc">You already have a network with these MCC and MNC values</string>
    <string name="name">Name</string>
    <string name="help_message_country">
        <![CDATA[<b>Current country</b>
        <br>
        This displays the current country you are in.<br>
        <br>
        <u>Adding a country</u><br>
        <br>
        There are two ways you can add a country to your countries list. Press the \"Add current\" button to add
        the current country you are in to the list. Alternatively you can add in countries manually by pressing the \"+\" button.<br>
        <i><font color="red">Note: Adding a country will allow roaming on all the networks in that country.</font></i><br>
        <br>
        <b>Add country window</b><br>
        From here you can manually select countries you would like to add to your list.<br>
        <br>
        <u>Removing a country</u><br>
        <br>
        You can remove a country from the list by simply pressing on the country and a popup window will appear asking if you want
        to remove that country. You can also long press on a network to select several to remove.<br>]]></string>
    <string name="current_country">Current country</string>
    <string name="saved_countries">Saved countries</string>
    <string name="add_country">Add country</string>
    <string name="countries">countries</string>
    <string name="remove_dialog_country">Are you sure you want to remove this country?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="enabled">Enabled</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="add_current">Add current</string>
    <string name="unknown">Unknown</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_help">Help</string>
    <string name="add">Add</string>
    <string name="edit...">Edit…</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="remove...">Remove…</string>
    <string name="removed">removed</string>
    <string name="notnow">Not now</string>
    <string name="skip">Do not show this message again</string>
    <string name="roaming_setting">System roaming setting is enabled</string>
    <string name="roaming_setting_message">It is recommended to have the system roaming setting disabled to get the most out of this tool. Do you want to open the window to disable it?</string>
    <string name="arrow">Arrow</string>
    <string name="selected">selected</string>
    <string name="sim1">SIM1</string>
    <string name="sim2">SIM2</string>
    <string name="dualsim_select">SIM selection</string>
    <string name="not_mount_storage">"Could not mount the external storage"</string>
    <string name="not_write">Could not write to external storage</string>
    <string name="not_create_folder">Could not create folder</string>
    <string name="not_valid_network_file">is not a valid Network list file</string>
    <string name="not_valid_country_file">is not a valid Country list file</string>
    <string name="replace_list">Replace current list</string>
    <string name="replace_list_message">Do you want to replace the current list with</string>
    <string name="filed_saved">File saved to </string>
    <string name="need_accept_phone_state_permission">You need to accept the permission to be able to display current network information.</string>
    <string name="added">added</string>
    <string name="current_network_added">Current network added</string>
</resources>